fix: word-wrap service title in PredictShow

--- a/src/styles/Predict/Show.scss
+++ b/src/styles/Predict/Show.scss
@@ -15,6 +15,7 @@
       margin: 0;
       color: $neutral_blue_10;
       font-weight: 600;
+      word-wrap: break-word;
     }
 
     h4 {
